<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/layout_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/white_background" >

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_alignParentTop="true"
            android:background="@drawable/blue_background" >

       <!--      <ImageView
                android:id="@+id/img_back"
                android:layout_width="17dip"
                android:layout_height="17dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dip"
                android:background="@drawable/back" /> -->

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/buy_title"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_success"
            android:layout_width="120dip"
            android:layout_height="30dip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dip" >

            <ImageView
                android:id="@+id/buy_success"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:background="@drawable/buy_successful" />

            <TextView
                android:id="@+id/txt_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/buy_success"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/buy_success_close"
            android:layout_width="100dip"
            android:layout_height="30dip"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dip"
            android:background="@drawable/orange_btn"
            android:layout_centerHorizontal="true"
            android:text="@string/buy_close"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>