<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/layout_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/white_background" >

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_alignParentTop="true"
            android:background="@drawable/blue_background" >

            <Button
                android:id="@+id/back_btn"
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@color/transparent" />

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="17dip"
                android:layout_height="17dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dip"
                android:background="@drawable/back" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/close_btn"
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/transparent" />

            <ImageView
                android:id="@+id/close_image"
                android:layout_width="17dip"
                android:layout_height="17dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dip"
                android:src="@drawable/close" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_about_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dip"
            android:text="@string/about_content"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_about_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_about_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dip"
            android:text="@string/about_place"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <Button
            android:id="@+id/pull_btn"
            android:layout_width="25dip"
            android:layout_height="20dip"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dip"
            android:background="@drawable/pull" />

        <Button
            android:id="@+id/feedback_about"
            android:layout_width="100dip"
            android:layout_height="30dip"
            android:layout_above="@id/pull_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dip"
            android:background="@drawable/green_btn_img"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

</RelativeLayout>