<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/layout_back"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/white_background" >

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_alignParentTop="true"
            android:background="@drawable/blue_background" >

            <Button
                android:id="@+id/back_btn"
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@color/transparent" />

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="17dip"
                android:layout_height="17dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dip"
                android:background="@drawable/back" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/message"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/close_btn"
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/transparent" />

            <ImageView
                android:id="@+id/close_image"
                android:layout_width="17dip"
                android:layout_height="17dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dip"
                android:src="@drawable/close" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout1" >

            <TextView
                android:id="@+id/txt_content1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginTop="4dip"
                android:text="@string/message_content1"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_content1_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_content1"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:text="@string/message_content1_detail"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </RelativeLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:layout_below="@id/layout3"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="3dip"
            android:layout_marginTop="4dip"
            android:background="@color/gray" />

        <RelativeLayout
            android:id="@+id/layout4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view1" >

            <TextView
                android:id="@+id/txt_content2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginTop="4dip"
                android:text="@string/message_content2"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_content2_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_content2"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:text="@string/message_content2_detail"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </RelativeLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:layout_below="@id/layout4"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="3dip"
            android:layout_marginTop="4dip"
            android:background="@color/gray" />

        <Button
            android:id="@+id/pull_btn"
            android:layout_width="25dip"
            android:layout_height="20dip"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dip"
            android:background="@drawable/pull" />
    </RelativeLayout>

</RelativeLayout>